# study_flask_admin

./: pyproject.toml
app/: __init__.py  config.py  dashboard.py  models.py
